# SPOS

./: .gitignore  CMakeLists.txt  connects.md  make_uf2.py  pico.ld  readme.md
app/: main.c  shell.c  tasks.c
arch/: port.c  startup.S
drivers/: clocks.c  gpio.c  uart.c
include/: clocks.h  gpio.h  hardware.h  heap.h  os.h  shell.h  string_utils.h  sync.h  tasks.h  uart.h
kernel/: heap.c  os.c  string_utils.c  sync.c
